# qt-newproject

./: README.md
Calculator/: calculator.cpp  calculator.h  calculator.ui
Notepad/: Notepad.pro  Resources.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui
TestForguess/: widget.cpp  widget.h  widget.ui
TestForsqlitelearning/: TestForsqlitelearning.pro  main.cpp  sqlitelearning.cpp  sqlitelearning.h  sqlitelearning.ui
TouristManagement/: CMakeLists.txt
TouristManagement2/: CMakeLists.txt  TryAgain.h  addpackage.cpp  addpackage.h  addpackage.ui  databaseheader.h  findpackage.cpp  findpackage.h  findpackage.ui  findtourist.cpp  findtourist.h  findtourist.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  registertourist.cpp  registertourist.h  registertourist.ui
build-Calculator-Desktop_Qt_5_14_2_MinGW_32_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_calculator.h
build-Notepad-Desktop_Qt_5_14_2_MinGW_32_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
build-TestForguess-Desktop_Qt_5_14_2_MinGW_32_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_widget.h
build-TestForsqlitelearning-Desktop_Qt_5_14_2_MinGW_32_bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  ui_sqlitelearning.h  wzs6.db  wzs7.db  wzs8.db  wzs9.db
build-Testforqt-Desktop_Qt_5_14_2_MinGW_32_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
build-TouristManagement2-Desktop_Qt_5_14_2_MinGW_32_bit-Debug/: CMakeCache.txt  Makefile  TouristManagement2.cbp  cmake_install.cmake
database/: TouristManager.db
running/: mm.cpp  (+3 more)
(+72 files in other folders)
